# slack-to-md

./: LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/slack_to_md/: cli.py  formatter.py  models.py  parser.py
tests/: test_formatter.py  test_parser.py
